// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base Input renders with value without crashing 1`] = `
<Base
  autoComplete="off"
  autoFocus={false}
  data-qa="base-input-element"
  data-qa-label="base-input-element-label"
  onChange={[Function]}
  type="text"
  value="test"
>
  <FloatingLabelWrapper
    data-qa-label="base-input-element-label"
    onChange={[Function]}
    value="test"
  >
    <div
      className="FloatingLabelWrapper GenericInput "
      style={
        Object {
          "cursor": "text",
          "position": "relative",
        }
      }
    >
      <div
        className="noLabelInputWrapper  bd-radius"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-qa="base-input-element"
          data-qa-label="base-input-element-label"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "color": "hsl(0, 2%, 12%)",
              "cursor": "text",
              "textAlign": undefined,
            }
          }
          type="text"
          value="test"
        />
        <span
          className="bar "
        />
      </div>
    </div>
  </FloatingLabelWrapper>
</Base>
`;

exports[`Base Input renders without crashing 1`] = `
<Base
  autoComplete="off"
  autoFocus={false}
  data-qa="base-input-element"
  data-qa-label="base-input-element-label"
  type="text"
>
  <FloatingLabelWrapper
    data-qa-label="base-input-element-label"
  >
    <div
      className="FloatingLabelWrapper GenericInput "
      style={
        Object {
          "cursor": "text",
          "position": "relative",
        }
      }
    >
      <div
        className="noLabelInputWrapper  bd-radius"
      >
        <input
          autoComplete="off"
          autoFocus={false}
          data-qa="base-input-element"
          data-qa-label="base-input-element-label"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "color": "hsl(0, 2%, 12%)",
              "cursor": "text",
              "textAlign": undefined,
            }
          }
          type="text"
        />
        <span
          className="bar "
        />
      </div>
    </div>
  </FloatingLabelWrapper>
</Base>
`;
